fix margins on smaller screens

--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -20,6 +20,10 @@ a {
   .about-container {
     padding: 4rem 3rem;
   }
+
+  h1 {
+    margin: 0 0 2rem;
+  }
 }
 
 @media screen and (max-width: 375px) {
