--- a/src/Components/Cards.css
+++ b/src/Components/Cards.css
@@ -184,3 +184,9 @@ h1 {
     padding: 1rem;
   }
 }
+
+@media screen and (max-width: 520px) {
+  h1 {
+    margin: 2rem 0 0;
+  }
+}
